--- a/Ashutosh Mishra Final Website - by Programmer Akash/contact.html
+++ b/Ashutosh Mishra Final Website - by Programmer Akash/contact.html
@@ -91,7 +91,7 @@
           const message = document.getElementById("message").value;
       
         if(name==""){
-            speechSynthesis.speak(new SpeechSynthesisUtterance('Please enter your name'));
+            speechSynthesis.speak(new SpeechSynthesisUtterance('Naam daal re bhosdike'));
             alert("Please Enter Your Name")
             return;
         }
