--- a/Ashutosh Mishra Final Website - by Programmer Akash/contact.html
+++ b/Ashutosh Mishra Final Website - by Programmer Akash/contact.html
@@ -91,12 +91,12 @@
           const message = document.getElementById("message").value;
       
         if(name==""){
-            speechSynthesis.speak(new SpeechSynthesisUtterance('Naam daal re bhosdike'));
+            speechSynthesis.speak(new SpeechSynthesisUtterance('Please enter your name'));
             alert("Please Enter Your Name")
             return;
         }
         if (number==""){
-            speechSynthesis.speak(new SpeechSynthesisUtterance('Pleaser enter your phone number'));
+            speechSynthesis.speak(new SpeechSynthesisUtterance('Please enter your phone number'));
             alert("Please Enter Your Phone Number")
             return;
         }
