--- a/Ashutosh Mishra Final Website - by Programmer Akash/index.html
+++ b/Ashutosh Mishra Final Website - by Programmer Akash/index.html
@@ -87,7 +87,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="contact.html" target="_blank" class="navbar-link" data-nav-link>Contact</a>
+            <a href="contact.html" target="_blank" class="navbar-hyper" data-nav-link>Contact</a>
           </li>
 
         </ul>
